--- a/index.html
+++ b/index.html
@@ -139,6 +139,35 @@
                     </ul>                   
                 </div>
         </nav>
+        
+ <div class="container mt-5">
+    <div style="width:100%; display: grid; justify-items: center;">
+        <h1 class=" text-center mb-2 text-info">Знаки зодиака</h1>
+     <img src="./img/line.png" class="golden-line" style="opacity: 1;">
+    </div>
+  
+    <div class="text-center mb-2">
+       <span><strong>Этот сайт предоставляет основную информацию об астрологии</strong></span>
+    </div>
+   <div class="marquee-container mt-2">
+    <div class="marquee-content">
+
+        <img class="img1" src="./img/aquarius-removebg-preview.png" alt="Image 1">
+        <img class="img1" src="./img/aries-removebg-preview.png" alt="Image 2">
+        <img class="img1" src="./img/sagittarius-removebg-preview.png" alt="Image 3">
+        <img class="img1" src="./img/cancer-removebg-preview.png" alt="Image 4">
+        <img class="img1" src="./img/capiricon-removebg-preview.png" alt="Image 5">
+        <img class="img1" src="./img/gemini-removebg-preview.png" alt="Image 6">
+        <img class="img1" src="./img/virgo-removebg-preview.png" alt="Image 7">
+        <img class="img1" src="./img/taurus-removebg-preview.png" alt="Image 8">
+        <img class="img1" src="./img/leo-removebg-preview.png" alt="Image 9">
+        <img class="img1" src="./img/libra-removebg-preview.png" alt="Image 10">
+        <img class="img1" src="./img/pisces-removebg-preview.png" alt="Image 11">
+        <img class="img1" src="./img/scorpio-removebg-preview.png" alt="Image 12">
+    </div>
+</div>
+</div> 
+
 
 <div class="container-fluid testiminal-container">
    
